config-root/namespaces/jx-staging/spring-demo/spring-demo-spring-demo-deploy.yaml
# Source: spring-demo/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-demo-spring-demo
  labels:
    draft: draft-app
    chart: "spring-demo-0.0.10"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'spring-demo'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: spring-demo-spring-demo
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: spring-demo-spring-demo
    spec:
      volumes:
        - name: config-vol
          configMap:
            name: application.yml
      serviceAccountName: spring-demo-spring-demo
      containers:
        - name: spring-demo
          image: "ghcr.io/babadofar/spring-demo:0.0.10"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config-vol
              mountPath: /opt/config
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
