config-root/namespaces/jx-staging/spring-demo/spring-demo-svc.yaml
# Source: spring-demo/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-demo
  labels:
    chart: "spring-demo-0.0.9"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'spring-demo'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: spring-demo-spring-demo
