config-root/namespaces/jx-staging/spring-demo/spring-demo-ingress.yaml
# Source: spring-demo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'spring-demo'
  name: spring-demo
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: spring-demo
                port:
                  number: 80
      host: spring-demo.jx-staging.192.168.64.2.nip.io
